# StreamMediumServer

./: README.md
src/StreamMediumServer/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/BasicUsageEnvironment/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/GroupSock/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/UsageEnvironment/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/WindowsAudioInputDevice/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/hlsProxy/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/liveMedia/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/mediaServer/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/proxyServer/: CMakeLists.txt
src/StreamMediumServer/LiveFiveFiveFive/testProgs/: CMakeLists.txt  testGSMStreamer.cpp
src/StreamMediumServer/StreamMediumServer/: CMakeLists.txt  StreamMediumServer.cpp  StreamMediumServer.h
